[gd_scene load_steps=11 format=3 uid="uid://ctt2vbrbygi8n"]

[ext_resource type="Texture2D" uid="uid://b4sy57qqg8cgo" path="res://assets/AI image room.png" id="3_00qty"]
[ext_resource type="Script" path="res://src/Battle.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://ec52ok7veshl" path="res://assets/rayyani2.png" id="4_ufikg"]
[ext_resource type="Resource" path="res://src/Dragon.tres" id="5"]

[sub_resource type="Animation" id="10"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemyContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="9"]
resource_name = "enemy_damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="13"]
resource_name = "enemy_died"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="12"]
resource_name = "mini_shake"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1, -2), Vector2(2, 2), Vector2(-2, 2), Vector2(1, -2), Vector2(-3, -2), Vector2(0, 0)]
}

[sub_resource type="Animation" id="11"]
resource_name = "shake"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-7, -7), Vector2(8, 8), Vector2(-5, 6), Vector2(5, -4), Vector2(-7, -5), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n2p8i"]
_data = {
"RESET": SubResource("10"),
"enemy_damaged": SubResource("9"),
"enemy_died": SubResource("13"),
"mini_shake": SubResource("12"),
"shake": SubResource("11")
}

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("4")
enemy = ExtResource("5")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.682353, 1, 1, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 144.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_00qty")
expand_mode = 1
stretch_mode = 4

[node name="EnemyContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.0
offset_top = -350.0
offset_right = 9.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="ProgressBar" type="ProgressBar" parent="EnemyContainer"]
visible = false
layout_mode = 2
step = 1.0
value = 50.0

[node name="Label" type="Label" parent="EnemyContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "HP: 25/50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enemy" type="TextureRect" parent="EnemyContainer"]
visible = false
layout_mode = 2
texture = ExtResource("4_ufikg")
stretch_mode = 4

[node name="Regret2" type="TextureRect" parent="EnemyContainer"]
modulate = Color(0.490196, 0.690196, 0.682353, 0.866667)
layout_mode = 2
texture = ExtResource("4_ufikg")
stretch_mode = 4

[node name="PlayerPanel" type="Panel" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -79.0
offset_right = 1.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "PLAYER"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/PlayerData"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 200.0
step = 1.0
value = 200.0

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerPanel/PlayerData/ProgressBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="PlayerPanel/PlayerData/ProgressBar/HBoxContainer"]
layout_mode = 2
text = "HP: 200/200"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionsPanel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5

[node name="Actions" type="VBoxContainer" parent="ActionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 374.0
offset_top = 417.0
offset_right = 544.0
offset_bottom = 518.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Attack" type="Button" parent="ActionsPanel/Actions"]
modulate = Color(1, 0.235294, 0.235294, 1)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Shut up."

[node name="Defend" type="Button" parent="ActionsPanel/Actions"]
modulate = Color(0.160775, 0.523527, 0.269044, 1)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Look away."

[node name="Run" type="Button" parent="ActionsPanel/Actions"]
modulate = Color(0.218698, 0.339318, 0.803402, 1)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Glare"

[node name="Textbox" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0

[node name="box" type="ColorRect" parent="Textbox"]
offset_left = 39.0
offset_top = 187.0
offset_right = 478.0
offset_bottom = 303.0
color = Color(0.0523869, 0.234031, 0.246623, 1)

[node name="Label" type="Label" parent="Textbox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 56.0
offset_top = 200.0
offset_right = -700.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2

[node name="Ticker" type="Label" parent="Textbox"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
text = ">"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n2p8i")
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[connection signal="pressed" from="ActionsPanel/Actions/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Defend" to="." method="_on_Defend_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Run" to="." method="_on_Run_pressed"]
